# LC-3

./: .gitignore  CMakeLists.txt  README.md  degisiklikler.txt
inc/: terminal.h  vm.h
src/: main.cpp  terminal.cpp  vm.cpp
